prevents clicking on existing users on the home page until new user is created; fixes users list overflow

--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -1,5 +1,6 @@
-.users .list-group {
+.users {
   height: 100vh;
+  overflow-y: auto;
 }
 .users--blured {
   filter: blur(3px);
